2010-04-12 [iwkse]	0.9.9cvs15

	* src/fancy_viewer.c
            Fix bug 2160: Open links with external browser

2010-03-04 [iwkse]	0.9.9cvs14

	* src/fancy_viewer.c
		Add support for save image

2010-03-04 [iwkse]	0.9.9cvs13

	* src/fancy_viewer.c
		Fixes a memory leak

2010-03-04 [iwkse]	0.9.9cvs12

	* src/fancy_viewer.c
		Fix previous commit

2010-03-04 [iwkse]	0.9.9cvs11

	* src/fancy_viewer.h
	* src/fancy_viewer.c
		Add basic support for download file

2010-03-03 [iwkse]	0.9.9cvs10

	* src/fancy_viewer.c
	* src/fancy_viewer.h
			Subscribe feed from menu
			Note: is being used here to check for
			RRSyl the API plugin_get_loaded_by_name 
			introduced in 3.7.5cvs27 which may be removed later.

2010-03-01 [iwkse]	0.9.9cvs9

	* src/fancy_viewer.c
            Fixes sensitivity on preferences's menu after a
            preference's override

2010-02-27 [iwkse]	0.9.9cvs8

	* src/fancy_viewer.c
	* src/fancy_viewer.h
            Do not use cache for preferences

2010-02-27 [iwkse]	0.9.9cvs7

	* src/fancy_prefs.h
	* src/fancy_prefs.c
	* src/fancy_viewer.h
	* src/fancy_viewer.c
            Better naming for blocking external content preference

2010-02-23 [iwkse]	0.9.9cvs6

	* src/fancy_viewer.c
            Better fix for bug 2120: do not rely on
            the partinfo name because it may be missing
            Also support mid images

2010-02-19 [iwkse]	0.9.9cvs5

	* src/fancy_viewer.c
            A better check to WebKit's version

2010-02-19 [iwkse]	0.9.9cvs4

	* src/fancy_viewer.c
            Add support for internal images as cid
            fix bug 2120

2010-02-10 [iwkse]	0.9.9cvs3

	* configure.ac
	* src/Makefile.am
            Add a version check to libsoup-gnome
            Commit the forgotten Makefile.am

2010-02-09 [sal]	0.9.9cvs2

	* src/fancy_viewer.c
	* src/fancy_viewer.h
            Add support for libsoup-gnome
            Patch by nebojsa with slight change

2010-01-31 [paul]	0.9.9cvs1

	* src/fancy_prefs.c