@@ -1,3 +1,8 @@
+2010-04-12 [iwkse]	0.9.9cvs16
+
+	* src/fancy_viewer.c
+            Fix a potential memory leak
+
 2010-04-12 [iwkse]	0.9.9cvs15
 
 	* src/fancy_viewer.c
